# Rust-Catdex

./: Cargo.toml
src/: main.rs  models.rs
static/: add.html  index.html
